<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="eventsbook.t00533766.eventsbook.Activites_Fragments.AddEventActivity">


        <TextView
            android:id="@+id/event_description_label"
            style="@style/label_styles"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_fields_height"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/describe_this_event"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_edit_text" />

        <TextView
            android:id="@+id/event_name_label"
            style="@style/label_styles"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_fields_height"
            android:fontFamily="serif"
            android:text="@string/event_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/event_name_text_view"
            style="@style/label_styles"
            android:layout_width="@dimen/input_fields_width"
            android:layout_height="@dimen/input_fields_height"
            android:fontFamily="monospace"
            android:hint="@string/events_name"
            android:maxLength="20"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/event_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_date_label"
            style="@style/label_styles"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_fields_height"
            android:fontFamily="serif"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name_label" />

        <TextView
            android:id="@+id/event_date_val"
            style="@style/label_styles"
            android:layout_width="@dimen/input_fields_width"
            android:layout_height="@dimen/input_fields_height"
            android:background="@color/colorPrimary"
            android:fontFamily="monospace"
            android:hint="DD/MM/YY"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/event_name_text_view"
            app:layout_constraintTop_toBottomOf="@+id/event_name_text_view" />

        <EditText
            android:id="@+id/event_description_text_view"
            style="@style/label_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            android:maxLines="12"
            android:minHeight="@dimen/input_fields_height"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description_label" />

        <TextView
            android:id="@+id/cost_label"
            style="@style/label_styles"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_fields_height"
            android:layout_marginStart="8dp"
            android:fontFamily="serif"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_date_label" />

        <EditText
            android:id="@+id/event_price__text_view"
            style="@style/label_styles"
            android:layout_width="@dimen/cost_check_box_height"
            android:layout_height="@dimen/input_fields_height"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/hint_cost"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cost_label"
            app:layout_constraintTop_toBottomOf="@+id/event_date_label" />

        <Button
            android:id="@+id/post_event_button"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/post_this_event"
            style="@style/label_styles"
            android:backgroundTint="@color/cardview_dark_background"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_description_text_view"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/location_label"
            style="@style/label_styles"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_fields_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/address"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cost_label" />

        <EditText
            android:id="@+id/address_edit_text"
            style="@style/label_styles"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:hint="@string/event_address"
            android:inputType="textMultiLine"
            android:textAlignment="textEnd"
            android:lines="3"
            android:maxLines="3"
            android:maxLength="50"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:scrollHorizontally="false"
            app:layout_constraintStart_toEndOf="@+id/location_label"
            app:layout_constraintTop_toBottomOf="@+id/event_price__text_view" />

        <ImageButton
            android:id="@+id/my_location_button"
            style="@style/label_styles"
            android:layout_width="50dp"
            android:backgroundTint="@color/red"
            android:layout_height="50dp"
            android:background="@drawable/ic_add_location_black_24dp"
            android:contentDescription="@string/my_device_location"
            app:layout_constraintBottom_toBottomOf="@+id/address_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/address_edit_text"
            app:layout_constraintTop_toTopOf="@+id/address_edit_text" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>